<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_visual_tools</name>
  <version>0.0.2</version>
  <description>Allows manual control of a TF through an Rviz plugin</description>

  <maintainer email="sebastian.zarnack@iis.fraunhofer.de">Sebastian Zarnack</maintainer>
  
  <author email="gokhulraj6200@gmail.com">Raj Gokhul Ravikumar</author>
  
  <license>BSD-3-Clause</license>

  <url type="bugtracker">https://github.com/Fraunhofer-IIS/tf_visual_tools/issues</url>
  <url type="repository">https://github.com/Fraunhofer-IIS/tf_visual_tools</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rviz2</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
